# rutok

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py
example/: cli.sh  test.py
programs/: CMakeLists.txt
programs/sentizer_bin/: main.cpp
programs/tokenizer/: main.cpp
programs/tokenizer_bin/: main.cpp
python/: CMakeLists.txt  rutok.cpp
python/pyrutok/: __init__.py  api.py
src/core/: Sentence.cpp  Sentence.h  Tag.cpp  Tag.h  Token.cpp  Token.h  charProperties.cpp  charProperties.h  dummy.cpp  encodingsConversion.h
src/properties/: charProperties.cpp  charProperties.h
src/streams/: BaseCharInputStream.h  BaseCharOutputStream.h  BaseSentenceOutputStream.cpp  BaseSentenceOutputStream.h  BaseTokenConcatInputStream.cpp  BaseTokenConcatInputStream.h  BaseTokenInputStream.h  BaseTokenOutputStream.h  EncodingInputStream.cpp  EncodingInputStream.h  EncodingInputStreamBase.cpp  EncodingInputStreamBase.h  EncodingInputStreamFromDescriptor.cpp  EncodingInputStreamFromDescriptor.h  EncodingInputStreamFromFile.cpp  EncodingInputStreamFromFile.h  EncodingInputStreamFromStream.cpp  EncodingInputStreamFromStream.h  EncodingInputStreamFromString.cpp  EncodingInputStreamFromString.h  EncodingOutputStream.cpp  EncodingOutputStream.h  IdenticalConcatInputStream.cpp  IdenticalConcatInputStream.h  SentenceInputStream.cpp  SentenceInputStream.h  SentenceJSONOutputStream.cpp  SentenceJSONOutputStream.h  SentenceOutputStream.h  SentenceStringOutputStream.cpp  SentenceStringOutputStream.h  SmallGroupsTokenConcatInputStream.cpp  SmallGroupsTokenConcatInputStream.h  TokenInputStream.cpp  TokenInputStream.h  TokenJSONOutputStream.cpp  TokenJSONOutputStream.h  TokenStringOutputStream.cpp  TokenStringOutputStream.h
test/: CMakeLists.txt  sentence_test.cpp  token_stream_test.cpp  token_test.cpp
test/functest/: rutok-test.py
test/functest/sentizer/: sentizer_dirty_text.reference  sentizer_dirty_text.txt  sentizer_test.opts  sentizer_test.reference  sentizer_test.txt  sentizer_test_dialog.reference  sentizer_test_dialog.txt  sentizer_test_encoding.reference  sentizer_test_encoding.txt  sentizer_test_encoding_1251.opts  sentizer_test_encoding_1251.reference  sentizer_test_encoding_1251.txt  sentizer_test_hyph.reference  sentizer_test_hyph.txt  sentizer_test_rhythm.reference  sentizer_test_rhythm.txt  sentizer_test_wrap.reference  sentizer_test_wrap.txt
test/unittest/: sentence_test.cpp  token_stream_test.cpp  token_test.cpp
